# Spoon-Knife

./: #README.md#  #index.html#  .#README.md  .,m  .Gitignore  .README.md.swp  .README.md.un~  .Rhistory  ._README.md  .angular-cli.json  .attributes  .drone.yml  .faq.html.un~  .filename.txt.swp  .gitattributes  .gitconfig  .gitignore  .gitmodules  .gitpod.yml  .hintrc  .index.html.swp  .index.html.un~  .index_BASE_23500.html.swp  .index_LOCAL_23500.html.swp  .index_REMOTE_23500.html.swp  .jenkins  .npmrc  .project  .replit  .routesrc  .sandeep_text_file.txt.swp  .spoons.txt.un~  .styles.css.un~  .swp  .teaspoon.md.swp  .test.py.swp  .travis.yml  .~lock.index.html#  0001-127.patch  0001-Update-README-setupv6.patch  (+2472 more)
!!!/: index.html  style.css
....posts/: Alright then
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  dependabot.yml  deploy.yml
.history/: index_20230820120759.html  index_20230820121035.html
01-css-methods/: index.html  styles.css
02-class-id-selectors/: index.html  styles.css
03-grouping-selectors/: index.html  styles.css
04-chaining-selectors/: index.html  styles.css
05-descendant-combinator/: index.html  styles.css
1206206148_add-attachment-to-ticket_138/: COMMENT_1206206148_schacon@gmail.com  TICKET_ID
1206206166_download-attached-file_112/: TAG_attach  TICKET_ID
1206206220_add-a-milestone_912/: COMMENT_1206206220_schacon@gmail.com  COMMENT_1206298186_schacon@gmail.com  TAG_milestone  TAG_next  TICKET_ID
1206206265_general-tag-management_628/: COMMENT_1206206265_schacon@gmail.com  TAG_tags  TICKET_ID
1206206327_show-expanded-comments_428/: COMMENT_1206206327_schacon@gmail.com  TAG_feature  TICKET_ID
1206206444_remove-a-ticket_143/: COMMENT_1206206444_schacon@gmail.com  TAG_ticket  TICKET_ID
1206206501_improved-cli-support_500/: COMMENT_1206206501_schacon@gmail.com  TAG_cli  TICKET_ID
1206206577_find-the-git-directory-properly-_425/: COMMENT_1206206577_schacon@gmail.com  TICKET_ID
1206206679_start-web-ui_911/: COMMENT_1206206679_schacon@gmail.com  COMMENT_1206401604_schacon@gmail.com  STATE_hold  TAG_webapp  TICKET_ID
1206206747_link-to-a-git-object_972/: COMMENT_1206206747_schacon@gmail.com  TICKET_ID
1206206861_branch-and-merge-ticgit-branch_714/: COMMENT_1206206861_schacon@gmail.com  TICKET_ID
1206206905_link-to-another-ticket_714/: COMMENT_1206206905_schacon@gmail.com  TICKET_ID
1206207422_change-ticket-assignment_157/: ASSIGNED_schacon@gmail.com  COMMENT_1206207422_schacon@gmail.com  COMMENT_1206299478_schacon@gmail.com  TICKET_ID
1206207503_checked-out-ticket-changes-when-new-ticket-added_530/: COMMENT_1206207503_schacon@gmail.com  COMMENT_1206207574_schacon@gmail.com  TAG_bug  TICKET_ID
1206298375_priority-for-ticket_953/: COMMENT_1206298375_schacon@gmail.com  TICKET_ID
1206305858_automated-tests_807/: COMMENT_1206305859_schacon@gmail.com  TAG_need  TICKET_ID
1206305906_lighthouse-sync_173/: COMMENT_1206305906_schacon@gmail.com  TAG_future  TICKET_ID
1206382088_order-on-the-beginning-of-a-tag_384/: COMMENT_1206382089_schacon@gmail.com  COMMENT_1206459061_schacon@gmail.com  TICKET_ID
1206382125_ticket-search_862/: COMMENT_1206382125_schacon@gmail.com  TICKET_ID
1206382402_dont-allow-blank-tags_237/: TICKET_ID
1206401359_prompt-for-comment-when-you-change-state_982/: COMMENT_1206401359_schacon@gmail.com  TICKET_ID
1206402911_test-ticket_403/: COMMENT_1206417608_schacon@gmail.com  TAG_iv  TICKET_ID
1206416069_add-comments-in-ticgitweb_693/: COMMENT_1206416070_schacon@gmail.com  COMMENT_1206418308_schacon@gmail.com  TAG_web  TICKET_ID
1206416139_modify-ticket-in-ticgitweb_876/: COMMENT_1206416140_schacon@gmail.com  COMMENT_1206418292_schacon@gmail.com  TICKET_ID
1206416426_test-redirect_781/: COMMENT_1206416426_schacon@gmail.com  COMMENT_1206418203_schacon@gmail.com  STATE_resolved  TAG_tag  TICKET_ID
1206416456_test-redirect-2_787/: TICKET_ID
1206416473_test-redirect-2_114/: COMMENT_1206417519_schacon@gmail.com  COMMENT_1206417524_schacon@gmail.com  TAG_me  TAG_scott  TAG_scotty  TAG_test  TICKET_ID
1206459118_recent-changes-in-webui_258/: COMMENT_1206459118_schacon@gmail.com  TICKET_ID
133079029/: README.txt
A test folder/: another test file
Anulla/: me.txt
Assets/: 139865_1-440477020
Assignments/: test.txt
BABIRYE GRACE/: index.html
Challenges/: challenge1.md  challenge2.md  challenge3.md  challenge4.md  challenge5.md  challenge6.md
ConsoleApp1/: ConsoleApp1.sln
ConsoleApplication/: ConsoleApplication.sln
ConsoleApplication1/: ConsoleApplication1.sln
Contact/: index.html
ESPN/: .classpath  .project  navigateToNFLScoreboard.java
EigenValue/: .cproject  .project  EigenValue.cpp  EigenValue.hpp  EigenValue_Kernels.cl  makefile
ExamplesFromCompetitiveProgramming/: .project
Fiat/: abc.txt
ForkExample/: pom.xml
Fr/: index.html
GitHub-Spoon-Knife-Additional-Project/: GitHub-Spoon-Knife-Additional-Project.sln
HelloGit/: HelloGit.sln
HelloWorld/: HelloWorld.sln
HelloWorld.ConsoleApp/: HelloWorld.ConsoleApp.sln
HelloWorldConsoleApp/: HelloWorldConsoleApp.sln
Helloworld/: Helloworld.sln
HolaMundo/: HolaMundo.sln
HolloWorld/: HolloWorld.sln
INode/: INode.py  README.md
IVREP/: .project
JPMC - Starter Repo - Task 1/: README.md  client3.py  client_test.py  requirements.txt  server3.py  test.csv
Machine Learning/: tempCodeRunnerFile.python
MinasMorgulDoorOpener (Haskell)/: MinasMorgulDoorOpener.hi  MinasMorgulDoorOpener.hs  ReadMe.md
Models/: Status.cs
MvcApplication1/: MvcApplication1.sln
MyFolder/: TestitOut.txt  hold.txt  what.md
NEWF/: a.txt  b.txt
New/: newSample.txt  sample.txt
New Content/: TestContent.txt
NuzgulPalindromeConfuser (Python)/: ReadMe.md  nuzgulConfuser.py  palinLines.txt
NuzgulPalindromeConfuser (Rust)/: NuzgulConfuser.rs  ReadMe.md  (+1 more)
SVMBinarySearchTree/SVMBinarySearchTree/samples/opencl/cl/SVMBinaryTreeSearch/: CMakeLists.txt  SVMBinaryNode.h  SVMBinaryTreeSearch.cpp  SVMBinaryTreeSearch.hpp  SVMBinaryTreeSearchVS13.vcxproj  SVMBinaryTreeSearch_Kernels.cl  SVMBinaryTreeSearch_OclFlags.txt
ss/: a.cpp
(+1073 files in other folders)
